--- a/backend/app/templates/logout.html
+++ b/backend/app/templates/logout.html
@@ -17,7 +17,7 @@
       </div>
     {% endif %}
 
-    <a href="{{ url_for('auth.home') }}" class="btn btn-primary mt-3">Do you want to try again?</a>
+    <a href="{{ url_for('auth.login') }}" class="btn btn-primary mt-3">Do you want to try again?</a>
 </div>
 {% endblock %}
 
