--- a/backend/app/templates/base.html
+++ b/backend/app/templates/base.html
@@ -79,7 +79,7 @@
           </li>
           {% if session.get('user_id') %}
             <li class="nav-item">
-              <a class="nav-link {% if request.endpoint == 'profiles.get_profile' %}active{% endif %}" href="{{ url_for('profiles.get_profile') }}">🐧 Profile</a>
+              <a class="nav-link {% if request.endpoint == 'profiles.edit_profile' %}active{% endif %}" href="{{ url_for('profiles.edit_profile') }}">🐧 Profile</a>
             </li>
             <li class="nav-item">
               <a class="nav-link {% if request.endpoint == 'auth.logout' %}active{% endif %}" href="{{ url_for('auth.logout') }}">🚪 Logout</a>
@@ -103,33 +103,27 @@
   <!-- Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
   
-  <!-- Favicon Animado (Forzar recarga para evitar cacheo) -->
+  <!-- Favicon Animado (Forzar Recarga en Navegadores) -->
   <script>
     document.addEventListener("DOMContentLoaded", function () {
-        // Array con las rutas de los favicons animados (GIF)
+        var favicon = document.getElementById("favicon");
         var favicons = [
             "{{ url_for('static', filename='favicon_penguin1.gif') }}",
             "{{ url_for('static', filename='favicon_penguin2.gif') }}",
             "{{ url_for('static', filename='favicon_penguin3_1.gif') }}"
         ];
+        var staticFavicon = "{{ url_for('static', filename='favicon_penguin1.ico') }}"; 
         var index = 0;
-        // Cambiar favicon cada 8 segundos
-        setInterval(function() {
-            // Elimina el favicon anterior
-            var oldLink = document.getElementById("favicon");
-            if(oldLink) {
-                oldLink.parentNode.removeChild(oldLink);
-            }
-            // Crea un nuevo elemento link para el favicon
-            var newLink = document.createElement("link");
-            newLink.id = "favicon";
-            newLink.rel = "icon";
-            newLink.type = "image/gif";
-            // Se agrega un query string para forzar la recarga y evitar cacheo
-            newLink.href = favicons[index] + '?v=' + new Date().getTime();
-            document.head.appendChild(newLink);
+
+        function changeFavicon() {
+            favicon.href = favicons[index];
             index = (index + 1) % favicons.length;
-        }, 8000);
+            setTimeout(() => {
+                favicon.href = staticFavicon;
+            }, 4000);
+        }
+
+        setInterval(changeFavicon, 8000);
     });
   </script>
 
