--- a/backend/app/templates/reset_password.html
+++ b/backend/app/templates/reset_password.html
@@ -1,4 +1,5 @@
-{% extends "auth_base.html" %}
+{% extends "base.html" %}
+{% set background_image = url_for('static', filename='images/reset_password_background.jpg') %}
 
 {% block content %}
 <div class="container">
@@ -25,4 +26,3 @@
 </div>
 {% endblock %}
 
-{% endblock %}
