--- a/backend/app/templates/forgot_password.html
+++ b/backend/app/templates/forgot_password.html
@@ -1,25 +1,25 @@
-{% extends "auth_base.html" %}
+{% extends "base.html" %}
+{% set background_image = url_for('static', filename='images/forgot_password_background.jpg') %}
 
 {% block content %}
-<div class="container">
-    <div class="row justify-content-center">
-        <div class="col-md-6">
-            <div class="card">
-                <div class="card-body">
-                    <h2 class="text-center">Password recovery</h2>
-                    <form method="POST">
-                        <div class="form-group">
-                            <label for="email">Mail</label>
-                            <input type="email" name="email" class="form-control" placeholder="Introduce tu correo" required>
-                        </div>
-                        <button type="submit" class="btn btn-primary btn-block">Enviar</button>
-                    </form>
+<div class="container d-flex align-items-end justify-content-center" style="min-height: 100vh;">
+    <div class="card" style="width:300px; height:200px; margin-bottom: 20px;">
+        <div class="card-body">
+            <h2 class="text-center">Password Recovery</h2>
+            <form method="POST" autocomplete="on">
+                <div class="form-group">
+                    <label for="email_input"></label>
+                    <input type="email" id="email_input" name="email" class="form-control" placeholder="Enter your email" required autocomplete="email">
                 </div>
-            </div>
+                <button type="submit" class="btn btn-primary btn-block">Send</button>
+            </form>
         </div>
     </div>
 </div>
 {% endblock %}
+
+
+
 
 
 
